# Audio_Processor

./: README.md  pyproject.toml
app/: audio_processing.py  key_detector.py  melody_extractor.py
app/gui/: localizer.py  main_window.py
app/gui/localization/: de.json  en.json  es.json  fr.json  it.json  ru.json
