[tool.poetry]
name = "audio-processor"
version = "0.1.0"
description = ""
authors = ["md <marceldiomare@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
music21 = "^9.5.0"
demucs = "^4.0.1"
pydub = "^0.25.1"
librosa = "^0.11.0"
pretty-midi = "^0.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
